tests/fail/directory.stderr
error: .. Is a directory
 --> tests/fail/directory.rs:4:5
  |
4 |     include_wgsl!("..")
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `include_wgsl` (in Nightly builds, run with -Z macro-backtrace for more info)
